use DatePicker using view instead of dialog

--- a/app/src/main/res/layout/dialog_date.xml
+++ b/app/src/main/res/layout/dialog_date.xml
@@ -1,9 +1,32 @@
 <?xml version="1.0" encoding="utf-8"?>
-<DatePicker xmlns:android="http://schemas.android.com/apk/res/android"
-            android:id="@+id/dialog_date_date_picker"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:calendarViewShown="false"
-    >
 
-</DatePicker>
+<LinearLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:padding="8dp">
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Pick Crime Date:"
+        android:padding="8dp"
+        android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"/>
+
+    <DatePicker
+        android:id="@+id/dialog_date_date_picker"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:calendarViewShown="false"
+        android:padding="8dp">
+    </DatePicker>
+
+    <Button
+        android:padding="8dp"
+        android:id="@+id/btn_date_picker_ok"
+        android:text="Ok"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"/>
+</LinearLayout>
