--- a/app/src/main/res/layout/fragment_crime.xml
+++ b/app/src/main/res/layout/fragment_crime.xml
@@ -60,4 +60,12 @@
         android:layout_marginLeft="16dp"
         android:text="@string/crime_report_text"/>
 
+    <Button
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/btn_call_suspect"
+        android:layout_marginRight="16dp"
+        android:layout_marginLeft="16dp"
+        android:text="Call Suspect"/>
+
 </LinearLayout>
